--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -8,7 +8,7 @@
 
 <h1><a href="">新文章</a></h1>
 {% for article in articles %}
-    <a href="">{{ article.title }}</a>
+    <a href="{% url 'blog:article_page' article.id %}">{{ article.title }}</a>
     <br/>
 {% endfor %}
 
