--- a/blog/templates/blog/edit_page.html
+++ b/blog/templates/blog/edit_page.html
@@ -5,16 +5,20 @@
     <title>Edit Page</title>
 </head>
 <body>
-<form action="" method="post">
-    <label>文章标题
-        <input type="text" name="title">
-    </label>
-    <br>
-    <label>文章内容
-        <input type="text" name="content">
-    </label>
-    <br>
-    <input type="submit">
+<form action="{% url 'blog:edit_action' %}" method="post">
+    {#  post方式提交必须  #}
+    {% csrf_token %}
+
+        <input type="hidden" name="article_id" value="{{ article.id | default:'0' }}">
+        <label>文章标题
+            <input type="text" name="title" value="{{ article.title }}">
+        </label>
+        <br>
+        <label>文章内容
+            <input type="text" name="content" value="{{ article.content }}">
+        </label>
+        <br>
+    <input type="submit" value="提交">
 </form>
 </body>
 </html>
